--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -21,8 +24,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        //Bmob的maven仓库地址--必填
-        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
