--- a/zy-frame/build.gradle
+++ b/zy-frame/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'com.jfrog.bintray'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 17091501
-        versionName "1.3.9"
+        versionCode 17102601
+        versionName "1.4.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -44,15 +44,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.jaeger.statusbaruitl:library:1.3.1'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     //滑动返回
     compile 'cn.bingoogolapple:bga-swipebacklayout:1.0.2@aar'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
@@ -65,7 +65,7 @@ dependencies {
     compile 'com.google.zxing:core:3.3.0'
 }
 
-version = "1.3.9"
+version = "1.4.0"
 def siteUrl = 'https://github.com/Rankian/ZYFrame'//项目主页
 def gitUrl = 'https://github.com/Rankian/ZYFrame'//git仓库地址
 
@@ -76,7 +76,7 @@ install{
         pom{
             project{
                 packaging 'aar'
-                name 'ZY-Frame'   //项目描述
+                name 'ZYFrame'   //项目描述
                 url siteUrl
                 //打开开源协议 一般都是Apache License2.0
                 licenses{
@@ -125,7 +125,7 @@ javadoc {
         author true
         version true
         links "http://docs.oracle.com/javase/7/docs/api"
-        title 'ZY-Frame'   // 文档标题
+        title 'ZYFrame'   // 文档标题
     }
 }
 artifacts {
@@ -157,7 +157,7 @@ bintray {
         userOrg = "rankian"        //发布到JCenter的组织，注意新版本的bintray是需要手动创建的
         repo = "SanJie"              //发布到JCenter上的仓库名称，注意新版本的bintray是需要手动创建的
         // 发布到Bintray上的项目名字
-        name = "ZY-Frame"
+        name = "ZYFrame"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
