--- a/zy-frame/build.gradle
+++ b/zy-frame/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 17120801
-        versionName "1.4.1"
+        versionCode 18062705
+        versionName "1.5.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -45,28 +45,21 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-    implementation 'com.jaeger.statusbaruitl:library:1.3.1'
-    implementation 'com.android.support:design:28.0.0-alpha3'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    api 'com.jaeger.statusbaruitl:library:1.3.1'
+    api 'com.android.support:design:28.0.0-alpha3'
+    api 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     //滑动返回
-    implementation 'cn.bingoogolapple:bga-swipebacklayout:1.1.9@aar'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.1.1'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.1.1'
-    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
-    implementation 'com.google.zxing:core:3.3.0'
+    api 'io.reactivex.rxjava2:rxjava:2.1.16'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:converter-gson:2.4.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+    api 'com.google.zxing:core:3.3.0'
 }
 
-version = "1.4.1"
+version = "1.5.0"
 def siteUrl = 'https://github.com/Rankian/ZYFrame'//项目主页
 def gitUrl = 'https://github.com/Rankian/ZYFrame'//git仓库地址
 
