--- a/zy-frame/build.gradle
+++ b/zy-frame/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 18062705
-        versionName "1.5.0"
+        versionCode 18111201
+        versionName "1.5.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -43,15 +43,15 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     api 'com.jaeger.statusbaruitl:library:1.3.1'
-    api 'com.android.support:design:28.0.0-alpha3'
+    api 'com.android.support:design:28.0.0'
     api 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     //滑动返回
-    api 'io.reactivex.rxjava2:rxjava:2.1.16'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxjava:2.2.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
@@ -59,7 +59,7 @@ dependencies {
     api 'com.google.zxing:core:3.3.0'
 }
 
-version = "1.5.0"
+version = "1.5.1"
 def siteUrl = 'https://github.com/Rankian/ZYFrame'//项目主页
 def gitUrl = 'https://github.com/Rankian/ZYFrame'//git仓库地址
 
