--- a/zy-frame/build.gradle
+++ b/zy-frame/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 28
-        versionCode 18111201
-        versionName "1.5.1"
+        targetSdkVersion 29
+        versionCode 19080801
+        versionName "1.5.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -43,23 +43,20 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
     api 'com.jaeger.statusbaruitl:library:1.3.1'
-    api 'com.android.support:design:28.0.0'
-    api 'com.github.bumptech.glide:glide:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    api 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     //滑动返回
-    api 'io.reactivex.rxjava2:rxjava:2.2.2'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
+    api 'io.reactivex.rxjava3:rxjava:3.0.0-RC1'
+    api 'com.squareup.retrofit2:retrofit:2.6.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    api 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     api 'com.google.zxing:core:3.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
 }
 
-version = "1.5.1"
+version = "1.5.2"
 def siteUrl = 'https://github.com/Rankian/ZYFrame'//项目主页
 def gitUrl = 'https://github.com/Rankian/ZYFrame'//git仓库地址
 
